adding freshgrade node config parms to application.yml

--- a/server/src/main/resources/application.yml
+++ b/server/src/main/resources/application.yml
@@ -10,3 +10,18 @@ spring:
       prefix: classpath:/groovy/
 app:
   version: de4db33f
+config:
+  AUTH_URL: localhost
+  NOTIFY_HOST: localhost
+  UPLOAD_HOST: localhost
+  NGROKMODE: mode_ok
+  AJAX_PROTOCOL: false
+  AJAX_URL_START: 0
+  TRANSLOADIT_KEY: 1234
+  TRANSLOADIT_FILE_TEMPLATE_ID:  5678
+  TRANSLOADIT_IMAGE_TEMPLATE_ID: 9ABC
+  TRANSLOADIT_VIDEO_TEMPLATE_ID: DEF0
+  MIXPANEL_TOKEN: mx12345
+  SENDER_ID: send12345
+  BUGSENSE_API_KEY_STUDENT: sense12345
+  APP_VERSION: 1.0
